library/src/libqdatetimeedit.h

typedef struct QCalendar QCalendar;
typedef struct QCalendarWidget QCalendarWidget;
typedef struct QDate QDate;
typedef struct QDateTime QDateTime;
typedef struct QDateTimeEdit QDateTimeEdit;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QPaintEvent QPaintEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionSpinBox QStyleOptionSpinBox;
typedef struct QTime QTime;
typedef struct QTimeEdit QTimeEdit;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
QDateTimeEdit* QDateTimeEdit_new(QWidget* parent);
QDateTimeEdit* QDateTimeEdit_new2();
QDateTimeEdit* QDateTimeEdit_new3(QDateTime* dt);
QDateTimeEdit* QDateTimeEdit_new4(QDate* d);
QDateTimeEdit* QDateTimeEdit_new5(QTime* t);
QDateTimeEdit* QDateTimeEdit_new6(QDateTime* dt, QWidget* parent);
QDateTimeEdit* QDateTimeEdit_new7(QDate* d, QWidget* parent);
QDateTimeEdit* QDateTimeEdit_new8(QTime* t, QWidget* parent);
QMetaObject* QDateTimeEdit_MetaObject(const QDateTimeEdit* self);
void* QDateTimeEdit_Metacast(QDateTimeEdit* self, const char* param1);
int QDateTimeEdit_Metacall(QDateTimeEdit* self, int param1, int param2, void** param3);
libqt_string QDateTimeEdit_Tr(const char* s);
QDateTime* QDateTimeEdit_DateTime(const QDateTimeEdit* self);
QDate* QDateTimeEdit_Date(const QDateTimeEdit* self);
QTime* QDateTimeEdit_Time(const QDateTimeEdit* self);
QCalendar* QDateTimeEdit_Calendar(const QDateTimeEdit* self);
void QDateTimeEdit_SetCalendar(QDateTimeEdit* self, QCalendar* calendar);
QDateTime* QDateTimeEdit_MinimumDateTime(const QDateTimeEdit* self);
void QDateTimeEdit_ClearMinimumDateTime(QDateTimeEdit* self);
void QDateTimeEdit_SetMinimumDateTime(QDateTimeEdit* self, QDateTime* dt);
QDateTime* QDateTimeEdit_MaximumDateTime(const QDateTimeEdit* self);
void QDateTimeEdit_ClearMaximumDateTime(QDateTimeEdit* self);
void QDateTimeEdit_SetMaximumDateTime(QDateTimeEdit* self, QDateTime* dt);
void QDateTimeEdit_SetDateTimeRange(QDateTimeEdit* self, QDateTime* min, QDateTime* max);
QDate* QDateTimeEdit_MinimumDate(const QDateTimeEdit* self);
void QDateTimeEdit_SetMinimumDate(QDateTimeEdit* self, QDate* min);
void QDateTimeEdit_ClearMinimumDate(QDateTimeEdit* self);
QDate* QDateTimeEdit_MaximumDate(const QDateTimeEdit* self);
void QDateTimeEdit_SetMaximumDate(QDateTimeEdit* self, QDate* max);
void QDateTimeEdit_ClearMaximumDate(QDateTimeEdit* self);
void QDateTimeEdit_SetDateRange(QDateTimeEdit* self, QDate* min, QDate* max);
QTime* QDateTimeEdit_MinimumTime(const QDateTimeEdit* self);
void QDateTimeEdit_SetMinimumTime(QDateTimeEdit* self, QTime* min);
void QDateTimeEdit_ClearMinimumTime(QDateTimeEdit* self);
QTime* QDateTimeEdit_MaximumTime(const QDateTimeEdit* self);
void QDateTimeEdit_SetMaximumTime(QDateTimeEdit* self, QTime* max);
void QDateTimeEdit_ClearMaximumTime(QDateTimeEdit* self);
void QDateTimeEdit_SetTimeRange(QDateTimeEdit* self, QTime* min, QTime* max);
int QDateTimeEdit_DisplayedSections(const QDateTimeEdit* self);
int QDateTimeEdit_CurrentSection(const QDateTimeEdit* self);
int QDateTimeEdit_SectionAt(const QDateTimeEdit* self, int index);
void QDateTimeEdit_SetCurrentSection(QDateTimeEdit* self, int section);
int QDateTimeEdit_CurrentSectionIndex(const QDateTimeEdit* self);
void QDateTimeEdit_SetCurrentSectionIndex(QDateTimeEdit* self, int index);
QCalendarWidget* QDateTimeEdit_CalendarWidget(const QDateTimeEdit* self);
void QDateTimeEdit_SetCalendarWidget(QDateTimeEdit* self, QCalendarWidget* calendarWidget);
int QDateTimeEdit_SectionCount(const QDateTimeEdit* self);
void QDateTimeEdit_SetSelectedSection(QDateTimeEdit* self, int section);
libqt_string QDateTimeEdit_SectionText(const QDateTimeEdit* self, int section);
libqt_string QDateTimeEdit_DisplayFormat(const QDateTimeEdit* self);
void QDateTimeEdit_SetDisplayFormat(QDateTimeEdit* self, libqt_string format);
bool QDateTimeEdit_CalendarPopup(const QDateTimeEdit* self);
void QDateTimeEdit_SetCalendarPopup(QDateTimeEdit* self, bool enable);
int QDateTimeEdit_TimeSpec(const QDateTimeEdit* self);
void QDateTimeEdit_SetTimeSpec(QDateTimeEdit* self, int spec);
QSize* QDateTimeEdit_SizeHint(const QDateTimeEdit* self);
void QDateTimeEdit_Clear(QDateTimeEdit* self);
void QDateTimeEdit_StepBy(QDateTimeEdit* self, int steps);
bool QDateTimeEdit_Event(QDateTimeEdit* self, QEvent* event);
void QDateTimeEdit_DateTimeChanged(QDateTimeEdit* self, QDateTime* dateTime);
void QDateTimeEdit_TimeChanged(QDateTimeEdit* self, QTime* time);
void QDateTimeEdit_DateChanged(QDateTimeEdit* self, QDate* date);
void QDateTimeEdit_SetDateTime(QDateTimeEdit* self, QDateTime* dateTime);
void QDateTimeEdit_SetDate(QDateTimeEdit* self, QDate* date);
void QDateTimeEdit_SetTime(QDateTimeEdit* self, QTime* time);
void QDateTimeEdit_KeyPressEvent(QDateTimeEdit* self, QKeyEvent* event);
void QDateTimeEdit_WheelEvent(QDateTimeEdit* self, QWheelEvent* event);
void QDateTimeEdit_FocusInEvent(QDateTimeEdit* self, QFocusEvent* event);
bool QDateTimeEdit_FocusNextPrevChild(QDateTimeEdit* self, bool next);
int QDateTimeEdit_Validate(const QDateTimeEdit* self, libqt_string input, int* pos);
void QDateTimeEdit_Fixup(const QDateTimeEdit* self, libqt_string input);
QDateTime* QDateTimeEdit_DateTimeFromText(const QDateTimeEdit* self, libqt_string text);
libqt_string QDateTimeEdit_TextFromDateTime(const QDateTimeEdit* self, QDateTime* dt);
int QDateTimeEdit_StepEnabled(const QDateTimeEdit* self);
void QDateTimeEdit_MousePressEvent(QDateTimeEdit* self, QMouseEvent* event);
void QDateTimeEdit_PaintEvent(QDateTimeEdit* self, QPaintEvent* event);
void QDateTimeEdit_InitStyleOption(const QDateTimeEdit* self, QStyleOptionSpinBox* option);
libqt_string QDateTimeEdit_Tr2(const char* s, const char* c);
libqt_string QDateTimeEdit_Tr3(const char* s, const char* c, int n);
QTimeEdit* QTimeEdit_new(QWidget* parent);
QTimeEdit* QTimeEdit_new2();
QTimeEdit* QTimeEdit_new3(QTime* time);
QTimeEdit* QTimeEdit_new4(QTime* time, QWidget* parent);
QMetaObject* QTimeEdit_MetaObject(const QTimeEdit* self);
void* QTimeEdit_Metacast(QTimeEdit* self, const char* param1);
int QTimeEdit_Metacall(QTimeEdit* self, int param1, int param2, void** param3);
libqt_string QTimeEdit_Tr(const char* s);
void QTimeEdit_UserTimeChanged(QTimeEdit* self, QTime* time);
libqt_string QTimeEdit_Tr2(const char* s, const char* c);
libqt_string QTimeEdit_Tr3(const char* s, const char* c, int n);